0024532: BRepOffsetAPI_MakePipeShell raises an exception in a case with auxiliary guide

Test case for issue CR24532